--- a/app/views/signup.erb
+++ b/app/views/signup.erb
@@ -1,40 +1,43 @@
 <!DOCTYPE html>
 <html>
- <head>
-  <meta charset="UTF-8">
-  <title>Bubble</title>
-   <link rel="stylesheet" href="css/slate.bootstrap.min.css">
- </head>
- <body>
-   <h1 align="center">Bubble</h1>
-   <form action="/login" method="POST" align="center">
-     <h3>Login</h3>
-     <div>
-     <input type="text" name="username" placeholder="Username">
-       </div> 
-      <div> 
-     <input type="text" name="password" placeholder="Password">
-        </div> 
-      <div>
-     <input type="submit" value="Submit">
-        </div> 
-   </form>
- <form action="/new_user" method="POST" align="center">
-      <h3 align="center">Sign-Up</h3>
-     <div>
-     <input type="text" name="username" placeholder="Enter a Username">
-     </div>
-     <div>
-     <input type="text" name="email" placeholder="Enter your E-Mail">
-       </div>
-       <div>
-     <input type="text" name="password" placeholder="Enter a Password">
+   <head>
+      <meta charset="UTF-8">
+      <title>Bubble</title>
+      <link rel="stylesheet" href="css/slate.bootstrap.min.css">
+      <link rel="stylesheet" href="css/style.css" type="text/css">
+   </head>
+   <body align="center">
+      <h1 align="center">Bubble</h1>
+      <form action="/login" method="POST" align="center"  id="landing">
+         <h3 align="center" id="landing">Login</h3>
+         <div class="input-group col-xs-2 col-md-offset-5">
+            <span class="input-group-addon" id="sizing-addon2"></span>
+            <input type="text" class="form-control" placeholder="Username" aria-describedby="sizing-addon2">
          </div>
-   <div>
-     </div>
+         <div class="input-group col-xs-2 col-md-offset-5">
+            <span class="input-group-addon" id="sizing-addon2"></span>
+            <input type="PASSWORD" class="form-control" placeholder="Password" aria-describedby="sizing-addon2">
+         </div>
+         <button type="button" class="btn btn-default navbar-btn">Sign in</button>
+      </form>
+      <form action="/new_user" method="POST" align="center"  id="landing">
+         <h3 align="center"  id="landing">Sign-Up</h3>
          <div>
-     <input type="submit" value="Submit">
-           </div>
-   </form>
- </body>
+         <div class="input-group col-xs-2 col-md-offset-5">
+            <span class="input-group-addon" id="sizing-addon"></span>
+            <input type="text" class="form-control" placeholder="Username" aria-describedby="sizing-addon2">
+         </div>
+         <div class="input-group col-xs-2 col-md-offset-5">
+            <span class="input-group-addon" id="sizing-addon"></span>
+            <input type="text" class="form-control" placeholder="E-Mail" aria-describedby="sizing-addon2">
+         </div>
+         <div class="input-group col-xs-2 col-md-offset-5">
+            <span class="input-group-addon" id="sizing-addon"></span>
+            <input type="text" class="form-control" placeholder="Password" aria-describedby="sizing-addon2">
+         </div>
+         <div>
+            <button type="button" class="btn btn-default navbar-btn">Sign in</button>
+         </div>
+      </form>
+   </body>
 </html>
