--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -11,7 +11,6 @@
 
 	 <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 	 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js">	</script>
-
     <script>
     $(function(){
       $("#navbar").load("/navbar");
@@ -20,13 +19,32 @@
 
   </head>
   <body>
-    <div id="navbar"></div>
 	 <div class="container">
 		 <div class="row">
-			 <div class="col-md-8"></div>
-			 <div class="col-md-8">
+			 <div id="navbar"></div>
+		 </div>
+		 <div class="row">
+			 <div class="col-md-1"></div>
+			 <div class="col-md-10">
+				 <br>
+				 <br>
+				 <br>
+				 <br>
+				 <div class="jumbotron">
+  					<h1 class="text-center">Welcome to Bubble!</h1>
+  					<p class="text-center">A hub for topics, people, places and ideas.</p>
+  					<p class="text-center"><a class="btn btn-primary btn-lg" href="/signup" role="button">Sign Up</a></p>
+				 </div>
 			 </div>
-			 <div class="col-md-4"></div>
+			 <div class="col-md-1"></div>
+		 </div>
+		 <div class="row">
+			 <div class="col-md-1"></div>
+			 <div class="col-md-5">
+			 </div>
+			 <div class="col-md-5">
+			 </div>
+			 <div class="col-md-1"></div>
 		 </div>
 	 </div>
   </body>
