--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -30,11 +30,13 @@
 				 <br>
 				 <br>
 				 <br>
-				 <div class="jumbotron">
-  					<h1 class="text-center">Welcome to Bubble!</h1>
-  					<p class="text-center">A hub for topics, people, places and ideas.</p>
-  					<p class="text-center"><a class="btn btn-primary btn-lg" href="/signup" role="button">Sign Up</a></p>
-				 </div>
+				 <% if session[:user_id] == nil %>
+				 	<div class="jumbotron">
+  						<h1 class="text-center">Welcome to Bubble!</h1>
+  						<p class="text-center">A hub for topics, people, places and ideas.</p>
+  						<p class="text-center"><a class="btn btn-primary btn-lg" href="/signup" role="button">Sign Up</a></p>
+				 	</div>
+				 <% end %>
 			 </div>
 			 <div class="col-md-1"></div>
 		 </div>
