--- a/app/views/navbar.erb
+++ b/app/views/navbar.erb
@@ -36,8 +36,12 @@
         <button type="submit" class="btn btn-default">Submit</button>
       </form>
 		<ul class="nav navbar-nav navbar-right">
-        <li><a href="/signup">Sign Up</a></li>
-        <li><a href="/signup">Sign In</a></li>
+			<% if session[:user_id] == nil %>
+		    <li><a href="/signup">Sign Up</a></li>
+          <li><a href="/signup">Sign In</a></li>
+			<% else %>
+			 <li><a href="/logout">Log Out</a></li>
+			<% end %>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
