--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -20,9 +20,7 @@
   </head>
   <body>
 	 <div class="container">
-		 <div class="row">
-			 <div id="navbar"></div>
-		 </div>
+		 <div id="navbar"></div>
 		 <div class="row">
 			 <div class="col-md-1"></div>
 			 <div class="col-md-10">
@@ -36,15 +34,32 @@
   						<p class="text-center">A hub for topics, people, places and ideas.</p>
   						<p class="text-center"><a class="btn btn-primary btn-lg" href="/signup" role="button">Sign Up</a></p>
 				 	</div>
+				 <% else %>
+				 <form action="/new_bubble" method="POST" align="center">
+				   <div class="input-group">
+              		<input type="text" class="form-control" placeholder="New Bubble">
+              		<span class="input-group-btn">
+                		<button class="btn btn-default" type="submit">Create</button>
+              		</span>
+            	</div>
+				 </form>
+				 <br>
+				 <form action="/new_post" method="POST" align="center">
+				 	<div class="input-group">
+              		<input type="text" class="form-control" placeholder="New Post">
+              		<span class="input-group-btn">
+                		<button class="btn btn-default" type="submit">Create</button>
+              		</span>
+            	</div>
+				 </form>
 				 <% end %>
 			 </div>
 			 <div class="col-md-1"></div>
 		 </div>
 		 <div class="row">
 			 <div class="col-md-1"></div>
-			 <div class="col-md-5">
-			 </div>
-			 <div class="col-md-5">
+			 <div class="col-md-10">
+
 			 </div>
 			 <div class="col-md-1"></div>
 		 </div>
