--- a/app/views/navbar.erb
+++ b/app/views/navbar.erb
@@ -17,11 +17,11 @@
         <li class=""><a href="/">Home <!--<span class="sr-only">(current)</span>--></a></li>
         <li><a href="#">Profile</a></li>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">New... <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
+            <li><a href="/create_bubble">Bubble</a></li>
+            <li><a href="/create_post">Post</a></li>
+            <li><a href="#">TopicLink</a></li>
             <li role="separator" class="divider"></li>
             <li><a href="#">Separated link</a></li>
             <li role="separator" class="divider"></li>
