--- a/app/views/loginform.erb
+++ b/app/views/loginform.erb
@@ -10,7 +10,7 @@
          </div>
          <button type="submit" class="btn btn-default navbar-btn">Enter</button>
       </form>
-      <form action="/new_user" method="POST" align="center"  id="landing">
+      <form action="/user/create" method="POST" align="center"  id="landing">
          <h3 align="center"  id="landing">Sign-Up</h3>
          <div>
          <div class="input-group">
