--- a/app/views/navbar.erb
+++ b/app/views/navbar.erb
@@ -19,8 +19,8 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">New... <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="/create_bubble">Bubble</a></li>
-            <li><a href="/create_post">Post</a></li>
+            <li><a href="/bubble/new">Bubble</a></li>
+            <li><a href="/post/new">Post</a></li>
             <li><a href="#">TopicLink</a></li>
             <li role="separator" class="divider"></li>
             <li><a href="#">Separated link</a></li>
