--- a/app/views/newbubble.erb
+++ b/app/views/newbubble.erb
@@ -25,18 +25,19 @@
 		<div class="row">
 			<div class="col-md-4"></div>
 			<div class="col-md-4">
-				<br>
-				<br>
-				<br>
-				<br>
-				<form action="/new_bubble" method="POST" align="center">
-				   <div class="input-group">
-              		<input type="text" class="form-control" placeholder="New Bubble">
-              		<span class="input-group-btn">
-                		<button class="btn btn-default" type="submit">Create</button>
-              		</span>
-            	</div>
-				 </form>
+
+                <form action="/bubble/create" method="POST" align="center">
+                    <div class="input-group">
+
+                    <input type="text" name= "bubble_name" class="form-control" placeholder="Bubble Name">
+                    <input type="text" name= "bubble_topics" class="form-control" placeholder="Bubble Topic">
+
+                    <span class="input-group-btn">
+                        <button class="btn btn-default" type="submit">Create</button>
+                    </span>
+                    </div>
+                </form>
+
 			</div>
 			<div class="col-md-4"></div>
 	   </div>
