Organized application_controller methods, and standardized app_controller /user methods.

--- a/app/views/loginform.erb
+++ b/app/views/loginform.erb
@@ -1,4 +1,4 @@
-      <form action="/login" method="POST" align="center"  id="landing">
+      <form action="/user/login" method="POST" align="center"  id="landing">
        <h3 align="center" id="landing">Login</h3>
          <div class="input-group">
             <span class="input-group-addon" id="sizing-addon2">Username</span>
