--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -32,7 +32,7 @@
 				 	<div class="jumbotron">
   						<h1 class="text-center">Welcome to Bubble!</h1>
   						<p class="text-center">A hub for topics, people, places and ideas.</p>
-  						<p class="text-center"><a class="btn btn-primary btn-lg" href="/signup" role="button">Sign Up</a></p>
+  						<p class="text-center"><a class="btn btn-primary btn-lg" href="/user/new" role="button">Sign Up</a></p>
 				 	</div>
 				 <br>
 				 <% end %>
