--- a/app/views/profile.erb
+++ b/app/views/profile.erb
@@ -8,15 +8,11 @@
 	 <title></title>
 
     <!-- Bootstrap -->
-    <link href="css/slate.bootstrap.min.css" rel="stylesheet">
+    <link href="/css/slate.bootstrap.min.css" rel="stylesheet">
 
 	 <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 	 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js">	</script>
-	 <script>
-    $(function(){
-      $("#navbar").load("/navbar");
-    });
-    </script>
+	 <%= erb :navbar %>
 
   </head>
   <body>
