--- a/app/views/signup.erb
+++ b/app/views/signup.erb
@@ -8,11 +8,7 @@
 
 		<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 	   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js">	</script>
-       <script>
-       $(function(){
-         $("#login_form").load("/login_form");
-       });
-       </script>
+       <%= erb :navbar %>
 
    </head>
    <body align="center">
@@ -21,7 +17,7 @@
 		<div class="row">
 			<div class="col-md-4"></div>
 			<div class="col-md-4">
-				<div id="login_form"></div>
+				<%= erb :loginform %>
 			</div>
 			<div class="col-md-4"></div>
 	   </div>
