--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,10 +14,10 @@ body {
 }
 
 .jumbotron{
-    background-color: #00CCFF;
+    background-color: #00a7f2;
     color:aliceblue;
-    outline-color: #00CCFF;
-
+    outline-color: #00a7f2;
+    text-shadow: -2px -2px 2px rgba(0, 0, 0, 1);
 }
 
 .text-center{
