--- a/public/css/style.css
+++ b/public/css/style.css
@@ -17,11 +17,15 @@ body {
     background-color: #00a7f2;
     color:aliceblue;
     outline-color: #00a7f2;
-    text-shadow: -2px -2px 2px rgba(0, 0, 0, 1);
+    
 }
 
 .text-center{
     color:aliceblue;
+    
+}
+#shadow{
+text-shadow: -2px -2px 2px rgba(0, 0, 0, 1);
 }
 
 .navbar-brand{
