--- a/app/views/bubble.erb
+++ b/app/views/bubble.erb
@@ -11,12 +11,8 @@
     <link href="css/slate.bootstrap.min.css" rel="stylesheet">
 
 	 <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-	 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js">	</script>
-	 <script>
-    $(function(){
-      $("#navbar").load("/navbar");
-    });
-    </script>
+	  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js">	</script>
+    <%= erb :navbar %>
 
   </head>
   <body>
