--- a/app/views/loginform.erb
+++ b/app/views/loginform.erb
@@ -15,15 +15,23 @@
          <div>
          <div class="input-group">
             <span class="input-group-addon" id="sizing-addon">Username</span>
-            <input type="text" name="username" class="form-control" placeholder="" aria-describedby="sizing-addon2">
+            <input type="text" name="username" class="form-control" placeholder="username" aria-describedby="sizing-addon2">
+         </div>
+        <div class="input-group">
+            <span class="input-group-addon" id="sizing-addon">Full Name</span>
+            <input type="text" name="realname" class="form-control" placeholder="Full Name" aria-describedby="sizing-addon2">
          </div>
          <div class="input-group">
             <span class="input-group-addon" id="sizing-addon">E-Mail</span>
-            <input type="text" name="email" class="form-control" placeholder="johndoe@email.com" aria-describedby="sizing-addon2">
+            <input type="text" name="email" class="form-control" placeholder="email" aria-describedby="sizing-addon2">
+         </div>
+        <div class="input-group">
+            <span class="input-group-addon" id="sizing-addon">Phone Number</span>
+            <input type="tel" name="phone" class="form-control" placeholder="phone number" aria-describedby="sizing-addon2">
          </div>
          <div class="input-group">
             <span class="input-group-addon" id="sizing-addon">Password</span>
-            <input type="PASSWORD" name="password" class="form-control" placeholder="*****" aria-describedby="sizing-addon2">
+            <input type="PASSWORD" name="password" class="form-control"  aria-describedby="sizing-addon2">
          </div>
          <div>
             <button type="submit" class="btn btn-default navbar-btn">Register</button>
