--- a/app/views/loginform.erb
+++ b/app/views/loginform.erb
@@ -10,6 +10,7 @@
          </div>
          <button type="submit" class="btn btn-default navbar-btn">Enter</button>
       </form>
+
       <form action="/user/create" method="POST" align="center"  id="landing">
          <h3 align="center"  id="landing">Sign-Up</h3>
          <div>
@@ -19,7 +20,7 @@
          </div>
         <div class="input-group">
             <span class="input-group-addon" id="sizing-addon">Full Name</span>
-            <input type="text" name="realname" class="form-control" placeholder="Full Name" aria-describedby="sizing-addon2">
+            <input type="text" name="realname" class="form-control" placeholder="full name" aria-describedby="sizing-addon2">
          </div>
          <div class="input-group">
             <span class="input-group-addon" id="sizing-addon">E-Mail</span>
