Added a logo to the navbar-brand.

--- a/app/views/navbar.erb
+++ b/app/views/navbar.erb
@@ -8,7 +8,9 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Bubble</a>
+      <div class="navbar-brand">
+        <a href="#" style="width: 128px;color: white;text-decoration: none;"><img src="images/logo.png" style="margin-top: -13px;margin-left: -4px;">Bubble</a>
+      </div>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
