--- a/app/views/newbubble.erb
+++ b/app/views/newbubble.erb
@@ -8,7 +8,7 @@
 	  <title></title>
 
     <!-- Bootstrap -->
-    <link href="css/slate.bootstrap.min.css" rel="stylesheet">
+    <link href="/css/slate.bootstrap.min.css" rel="stylesheet">
 	 <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 	 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js">	</script>
 	 <%= erb :navbar %>
