--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -7,8 +7,8 @@
     <title>Bubble</title>
 
     <!-- Bootstrap -->
-    <link href="css/cosmo.bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css" type="text/css">
+    <link href="/css/cosmo.bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="/css/style.css" type="text/css">
 
     
 
