--- a/app/views/navbar.erb
+++ b/app/views/navbar.erb
@@ -17,7 +17,9 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li class=""><a href="/">Home <!--<span class="sr-only">(current)</span>--></a></li>
-        <li><a href="/profile/show/:id">Profile</a></li>
+			<% if session[:user_id] != nil %>
+			<li><a href="/profile/show/<%= @user.id%>">Profile</a></li>
+			<% end %>
         <li class="dropdown">
           <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">New... <span class="caret"></span></a>
           <ul class="dropdown-menu">
@@ -31,12 +33,14 @@
           </ul>
         </li>
       </ul>
+<!--
       <form class="navbar-form navbar-left" role="search">
         <div class="form-group">
           <input type="text" class="form-control" placeholder="Search">
         </div>
         <button type="submit" class="btn btn-default">Submit</button>
       </form>
+-->
 		<ul class="nav navbar-nav navbar-right">
 			<% if session[:user_id] == nil %>
 		    <li><a href="/signup">Sign Up</a></li>
