--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -14,12 +14,11 @@
 
 	 <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 	 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js">	</script>
-    <%= erb :navbar %>
 
   </head>
   <body>
 	 <div class="container">
-		 <div id="navbar"></div>
+		 <%= erb :navbar %>
 		 <div class="row">
 			 <div class="col-md-1"></div>
 			 <div class="col-md-10">
@@ -38,13 +37,7 @@
 			 </div>
 			 <div class="col-md-1"></div>
 		 </div>
-		 <div class="row">
-			 <div class="col-md-1"></div>
-			 <div class="col-md-10">
-
-			 </div>
-			 <div class="col-md-1"></div>
-		 </div>
 	 </div>
+	 <%= erb :homeposts %>
   </body>
 </html>
