--- a/app/views/navbar.erb
+++ b/app/views/navbar.erb
@@ -19,7 +19,8 @@
         <li class=""><a href="/">Home <!--<span class="sr-only">(current)</span>--></a></li>
 			<% if session[:user_id] != nil %>
 			<li><a href="/profile/show/<%= @user.id%>">Profile</a></li>
-			<% end %>
+			<li><a href="/mybubbles">Manage Bubbles</a></li>
+			<li><a href="/explore">Explore</a></li>
         <li class="dropdown">
           <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">New... <span class="caret"></span></a>
           <ul class="dropdown-menu">
@@ -32,6 +33,7 @@
             <li><a href="#">One more separated link</a></li>
           </ul>
         </li>
+		  <% end %>
       </ul>
 <!--
       <form class="navbar-form navbar-left" role="search">
