--- a/app/views/homeposts.erb
+++ b/app/views/homeposts.erb
@@ -2,7 +2,7 @@
 <div class="row">
 	<div class="col-md-1"></div>
 	<div class="col-md-10">
-		<% @posts.each do |post| %>
+		<% @posts.reverse.each do |post| %>
 		<div class="panel panel-default">
   			<div class="panel-heading">
 				<h3 class="panel-title"><%=post.user.username %></h3>
@@ -10,9 +10,20 @@
   			<div class="panel-body">
 				<%=post.post_text %>
   			</div>
+			<div class="panel-footer">
+			Posted in: <% post.bubbles.reverse.each do |bubble|%>
+			<%=bubble.bubble_name + "  " %>
+			<% end %></div>
 		</div>
 		<% end %>
 	</div>
 	<div class="col-md-1"></div>
 </div>
 <% end %>
+<!--
+<div class="row">
+	<div class="col-md-4"></div>
+	<div class="col-md-4"></div>
+	<div class="col-md-4"></div>
+</div>
+-->
