--- a/app/views/newpost.erb
+++ b/app/views/newpost.erb
@@ -33,6 +33,11 @@
                        <input type="file" name="post_media" class="form-control" placeholder="Post media here">
                        <input type="text" name="post_topic" class="form-control" placeholder="What is the topic of this post?">
                        <input type="text" name="post_type" class="form-control" placeholder="What type of post is this?">
+						<select name="bubble" class="form-control">
+							<% Bubble.all.each do |bubble| %>
+							<option>  <%= bubble.bubble_name %> </option>
+				      	<% end %>
+			      	</select>
 
               		<span class="input-group-btn">
                 		<button class="btn btn-default" type="submit">Post</button>
