--- a/app/views/mybubbles.erb
+++ b/app/views/mybubbles.erb
@@ -18,10 +18,19 @@
   <body>
 	  <div class="container">
 		<%= erb :navbar %>
-		<div class="row">
-			<div class="col-md-4"></div>
-			<div class="col-md-4"></div>
-			<div class="col-md-4"></div>
+		<br>
+		<br>
+		<br>
+		<br>
+		  <div class="row">
+			<div class="col-md-1"></div>
+			<div class="col-md-3">
+				<h2 align="center">Feed</h2>
+			</div>
+			<div class="col-md-6">
+				<h2 align="center">Your Bubbles</h2>
+			</div>
+			<div class="col-md-1"></div>
 	   </div>
   </body>
 </html>
