--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,4 @@
+/*
 @import url(https://fonts.googleapis.com/css?family=Passion+One);
 h1{
     font-family: 'Passion One', cursive;
@@ -8,11 +9,13 @@ h1{
     font-family: 'Helvetica', sans-serif;
     color: aliceblue;
 }
+*/
 
 body {
-    background-color: #00CCFF;
+    background-color: rgb(191, 200, 224);
 }
 
+/*
 .jumbotron{
     background-color: #00a7f2;
     color:aliceblue;
@@ -29,3 +32,35 @@ text-shadow: -2px -2px 2px rgba(0, 0, 0, 1);
 .navbar-brand{
     color:aliceblue;
 }
+*/
+
+/*
+.panel {
+	background-color:azure;
+}
+*/
+
+/*
+.panel-header {
+	background-color: silver;
+}
+*/
+
+/*
+.panel-body {
+	background-color:dimgray;
+}
+*/
+
+.panel-footer {
+/*
+	background-color: silver;
+	border-top: 1px solid slategrey;
+*/
+	font-size: 10px;
+}
+
+/*
+.panel-default {
+    border-color: slategray;
+}*/
