--- a/app/views/newbubble.erb
+++ b/app/views/newbubble.erb
@@ -8,7 +8,7 @@
 	  <title></title>
 
     <!-- Bootstrap -->
-    <link href="/css/cosmo.bootstrap.min.css" rel="stylesheet">
+    <link href="/css/flatly.bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css" type="text/css">
 
 	 <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
