implemented "mybubbles" page with a feed and bubble list

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -37,7 +37,11 @@
 			 </div>
 			 <div class="col-md-1"></div>
 		 </div>
-	 </div>
-	 <%= erb :homeposts %>
+		 <div class="row">
+			 <div class="col-md-1"></div>
+			 <div class="col-md-10"><%= erb :homeposts_column %></div>
+			 <div class="col-md-1"></div>
+		 </div>
+	  </div>
   </body>
 </html>
