--- a/app/views/mybubbles.erb
+++ b/app/views/mybubbles.erb
@@ -26,9 +26,13 @@
 			<div class="col-md-1"></div>
 			<div class="col-md-3">
 				<h2 align="center">Feed</h2>
+				<br>
+				<%= erb :homeposts_column %>
 			</div>
 			<div class="col-md-6">
 				<h2 align="center">Your Bubbles</h2>
+				<br>
+				<%= erb :list_bubbles %>
 			</div>
 			<div class="col-md-1"></div>
 	   </div>
