--- a/app/views/profile.erb
+++ b/app/views/profile.erb
@@ -19,8 +19,8 @@
 	  <div class="container">
 		<%= erb :navbar %>
 		<div class="row">
-			<div class="col-md-3"></div>
-			<div class="col-md-6">
+			<div class="col-md-1"></div>
+			<div class="col-md-10">
 				<br>
 				<br>
 				<br>
@@ -30,8 +30,23 @@
             <h3>Email: <span><%= @user.email%></span></h3>
             <h3>Phone number: <span><%= @user.phone%></span></h3>
             <h3>User Score: <span><%= @user.user_score%></span></h3>
+				<br>
+				<h3 align="center">Posts:</h3>
+				<% @user.posts.reverse[0..19].each do |post|%>
+					<div class="panel panel-default">
+						<div class="panel-body">
+							<%=post.post_text %>
+						</div>
+						<div class="panel-footer">
+							<strong>Posted in:</strong>
+								<% post.bubbles.reverse.each do |bubble|%>
+									<%=bubble.bubble_name + "  " %>
+								<% end %> at <%=post.created_at%>
+						</div>
+					</div>
+				<% end %>
          </div>
-			<div class="col-md-3"></div>
+			<div class="col-md-1"></div>
 	   </div>
   </body>
 </html>
