--- a/app/views/template.erb
+++ b/app/views/template.erb
@@ -8,17 +8,16 @@
 	 <title></title>
 
     <!-- Bootstrap -->
-    <link href="/css/cosmo.bootstrap.min.css" rel="stylesheet">
+    <link href="/css/flatly.bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css" type="text/css">
 
 	 <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 	 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js">	</script>
-	 <%= erb :navbar %>
 
   </head>
   <body>
 	  <div class="container">
-		<div id="navbar"></div>
+	  <%= erb :navbar %>
 		<div class="row">
 			<div class="col-md-4"></div>
 			<div class="col-md-4"></div>
