added bubble page

--- a/app/views/bubble.erb
+++ b/app/views/bubble.erb
@@ -12,16 +12,21 @@
     <link rel="stylesheet" href="/css/style.css" type="text/css">
 
 	 <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-	  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js">	</script>
-    <%= erb :navbar %>
+	 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js">	</script>
 
   </head>
   <body>
 	  <div class="container">
-		<div id="navbar"></div>
+	  <%= erb :navbar %>
 		<div class="row">
 			<div class="col-md-1"></div>
-			<div class="col-md-10"></div>
+			<div class="col-md-10">
+				<br>
+				<br>
+				<br>
+				<br>
+				<%= erb :bubble_posts %>
+			</div>
 			<div class="col-md-1"></div>
 	   </div>
   </body>
