--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -42,7 +42,8 @@
 		 </div>
 		 <div class="row">
 			 <div class="col-md-1"></div>
-			 <div class="col-md-10"><%= erb :homeposts_column %></div>
+			 <div class="col-md-5"><%= erb :homeposts_column %></div>
+			 <div class="col-md-5"><%= erb :all_bubbles %></div>
 			 <div class="col-md-1"></div>
 		 </div>
 	  </div>
