--- a/app/views/mybubbles.erb
+++ b/app/views/mybubbles.erb
@@ -32,6 +32,8 @@
 			<div class="col-md-6">
 				<h2 align="center">Your Bubbles</h2>
 				<br>
+				<div class="text-center"><a href="/bubble/new"><button align="center" type="button" class="btn btn-primary btn-lg">New Bubble</button></a></div>
+				<br>
 				<%= erb :user_bubbles %>
 			</div>
 			<div class="col-md-1"></div>
