--- a/app/views/mybubbles.erb
+++ b/app/views/mybubbles.erb
@@ -27,6 +27,8 @@
 			<div class="col-md-4">
 				<h2 align="center">Feed</h2>
 				<br>
+				<div class="text-center"><a href="/post/new"><button align="center" type="button" class="btn btn-primary btn-lg">New Post</button></a></div>
+				<br>
 				<%= erb :homeposts_column %>
 			</div>
 			<div class="col-md-6">
