placeholder profile pic, g'night

--- a/app/views/profile.erb
+++ b/app/views/profile.erb
@@ -25,6 +25,7 @@
 				<br>
 				<br>
 				<br>
+				<img height="140" width="140" src="https://fpvracing.tv/assets/default-c9c017d4b67a57a384936c69ac16f6cd9698f4957da34f73fb8886c190b69e02.png"  class="img-rounded">
 				<h2>Bubbler: <span><%= @user.realname%></span></h2>
             <h3>Username: <span><%= @user.username%></span></h3>
             <h3>Email: <span><%= @user.email%></span></h3>
