--- a/app/views/explore.erb
+++ b/app/views/explore.erb
@@ -27,7 +27,7 @@
 			<div class="col-md-10">
 				<h2 align="center">Hot Bubbles</h3>
 				<br>
-				<%= erb :all_bubbles %>
+				<%= erb :all_bubbles_explore %>
 			</div>
 			<div class="col-md-1"></div>
 	   </div>
