--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,7 +5,6 @@ h1{
     font-size: 500%;
     color: aliceblue;
     text-shadow: -2px -2px 2px rgba(0, 0, 0, 1);
-
 }
 #landing{
     font-family: 'Helvetica', sans-serif;
@@ -14,8 +13,8 @@ h1{
 
 
 body {
-    background-color: #00a7f2;
-;
+    background-color: #56A0D3 ;
+
 }
 
 .plain-link {
