--- a/public/css/style.css
+++ b/public/css/style.css
@@ -75,7 +75,8 @@ text-shadow: -2px -2px 2px rgba(0, 0, 0, 1);
 	font-size: 10px;
 }
 
-/*
+
 .panel-default {
-    border-color: slategray;
-}*/
+    /*border-color: slategray;*/
+  box-shadow: 8px 8px 2px 0px rgba(0, 0, 0, 0.4);/*44, 62, 80*/
+}
