--- a/app/views/all_bubbles_explore.erb
+++ b/app/views/all_bubbles_explore.erb
@@ -8,7 +8,7 @@
 		<br>
 		<form action="/bubble/join" method="POST">
 			 <div class="input-group">
-				 <input type="hidden" name="bubble" value="<#%=bubble.bubble_name %>">
+				 <input type="hidden" name="bubble" value="<%=bubble.bubble_name %>">
 				<span class="input-group-btn">
                <button class="btn btn-primary btn-sm" type="submit">Join</button>
             </span>
