--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -28,7 +28,7 @@
 				 <br>
 				 <% if session[:user_id] == nil %>
 				 	<div class="jumbotron">
-  						<h1 class="text-center" id="shadow">Welcome to Bubble!</h1>
+  						<h1 class="text-center" id="shadow">Welcome to Bubbl!</h1>
   						<p class="text-center" id="shadow">A hub for topics, people, places and ideas.</p>
   						<p class="text-center"><a class="btn btn-primary btn-lg" href="/signup" role="button">Sign Up</a></p>
 				 	</div>
