--- a/app/views/signup.erb
+++ b/app/views/signup.erb
@@ -2,23 +2,29 @@
 <html>
    <head>
       <meta charset="UTF-8">
-       
+
       <title>Bubble</title>
       <link href="/css/flatly.bootstrap.min.css" rel="stylesheet">
       <link rel="stylesheet" href="/css/style.css" type="text/css">
 
 		<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 	   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js">	</script>
-       
-       
+
+
 
    </head>
-   <body align="center">
-     <h1 align="center">Bubble</h1>
+   <body>
      <div class="container">
 		<div class="row">
 			<div class="col-md-4"></div>
 			<div class="col-md-4">
+        <%= erb :navbar %>
+        <br>
+        <br>
+        <br>
+        <br>
+        <h1 align="center">Bubbl</h1>
+        <br>
 				<%= erb :loginform %>
 			</div>
 			<div class="col-md-4"></div>
