--- a/app/views/homeposts_column.erb
+++ b/app/views/homeposts_column.erb
@@ -1,3 +1,9 @@
+<style>
+  .panel-footer {
+    font-size:10px;
+    
+  }
+</style>
 <% if session[:user_id] != nil %>
 		<% @posts.reverse.each do |post| %>
 		<div class="panel panel-default">
