--- a/app/views/profile.erb
+++ b/app/views/profile.erb
@@ -41,7 +41,7 @@
 						<div class="panel-body">
 							<%=post.post_text %>
 						</div>
-						<div class="panel-footer">
+						<div class="panel-footer" style="font-size:10px;">
 							<strong>Posted in:</strong>
 								<% post.bubbles.reverse.each do |bubble|%>
 									<%=bubble.bubble_name + "  " %>
