--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -8,9 +8,9 @@
 
     <!-- Bootstrap -->
     <link href="/css/flatly.bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="/css/style.css" type="text/css">
+    <link rel="stylesheet" href="/css/style.css">
 
-    
+
 
 	 <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 	 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js">	</script>
